force-app/main/objects/Milestone_Period__c.object
<CustomObject>
    <description>New object for the FC Agent to manage the financial closure of the Project.</description>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AD1</fullName>
                </value>
                <value>
                    <fullName>AU1</fullName>
                </value>
                <value>
                    <fullName>BE5</fullName>
                </value>
                <value>
                    <fullName>CA1</fullName>
                </value>
                <value>
                    <fullName>CH1</fullName>
                </value>
                <value>
                    <fullName>CN1</fullName>
                </value>
                <value>
                    <fullName>DE5</fullName>
                </value>
                <value>
                    <fullName>DK1</fullName>
                </value>
                <value>
                    <fullName>FI1</fullName>
                </value>
                <value>
                    <fullName>FR5</fullName>
                </value>
                <value>
                    <fullName>HK1</fullName>
                </value>
                <value>
                    <fullName>IN1</fullName>
                </value>
                <value>
                    <fullName>IT1</fullName>
                </value>
                <value>
                    <fullName>ME1</fullName>
                </value>
                <value>
                    <fullName>NL5</fullName>
                </value>
                <value>
                    <fullName>NO1</fullName>
                </value>
                <value>
                    <fullName>NZ1</fullName>
                </value>
                <value>
                    <fullName>PH1</fullName>
                </value>
                <value>
                    <fullName>SA5</fullName>
                </value>
                <value>
                    <fullName>SE1</fullName>
                </value>
                <value>
                    <fullName>SG1</fullName>
                </value>
                <value>
                    <fullName>UK1</fullName>
                </value>
                <value>
                    <fullName>US5</fullName>
                </value>
                <value>
                    <fullName>ZA1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FC_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FC Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Milestone_Period</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Period_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Period Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Period_Date__c</fullName>
        <label>Financial Period Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>CASE( MONTH(Financial_Period_Date__c ) , 1, &apos;Jan&apos;, 2, &apos;Feb&apos;,3,&apos;Mar&apos;,4,&apos;Apr&apos;,5,&apos;May&apos;,6,&apos;Jun&apos;,7,&apos;Jul&apos;,8,&apos;Aug&apos;,9,&apos;Sep&apos;,10,&apos;Oct&apos;,11,&apos;Nov&apos;,&apos;Dec&apos;)</formula>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Date__c</fullName>
        <label>Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>Text(YEAR( Financial_Period_Date__c ))</formula>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Milestone Period</label>
    <listViews>
        <fullName>All_ClosedMilestone_Periods</fullName>
        <columns>NAME</columns>
        <columns>BU__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Financial_Period_Date__c</columns>
        <columns>Financial_Period_Closed__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Financial_Period_Closed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Milestone Periods</label>
    </listViews>
    <listViews>
        <fullName>All_Milestone_Periods</fullName>
        <columns>NAME</columns>
        <columns>BU__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Financial_Period_Date__c</columns>
        <columns>Financial_Period_Closed__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Milestone Periods</label>
    </listViews>
    <listViews>
        <fullName>Last_months_periods2</fullName>
        <columns>NAME</columns>
        <columns>BU__c</columns>
        <columns>Financial_Period_Closed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Financial_Period_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>Last months periods</label>
    </listViews>
    <nameField>
        <label>Milestone Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestone Period</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>